--- a/templates/sanjog/dashboard.html
+++ b/templates/sanjog/dashboard.html
@@ -13,7 +13,7 @@
 
     <div class="profile_view">
       <figure class="avatar mb-3">
-        <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-512.png" style="object-fit: cover;" alt=""/>
+        <img src="{{current_supplier.profile_picture.url}}" style="object-fit: cover;" alt=""/>
       </figure>
       <h4 class="text-white fs-13">{{current_supplier}}</h4>
       <p class="fs-13">{{request.user.email}}</p>
