--- a/templates/sanjog/header.html
+++ b/templates/sanjog/header.html
@@ -144,7 +144,7 @@
 
                         <div id="results-box-div" class="results-card-div not-visible">
                             <div id="results-box" class="results-card"></div>
-                            <div id="sub-results-box" class="results-card"></div>
+                            <div id="sub-results-box" class="results-card" style="margin-top: -20px;"></div>
                         </div>
                     </div>
                     </form>
@@ -1044,14 +1044,14 @@
             <form id="search-form" onSubmit="return handleSearchFormSubmit();"
             class="header-search hs-expanded hs-round d-md-flex input-wrapper mr-4 ml-4">
         
-            <input type="text" class="form-control" name="keyword" id="searches"
-                placeholder="What are you looking for..." required />
+            <input type="text" class="form-control" name="keyword" id="searches-mobile"
+                placeholder="What are you looking for..." required autocomplete="off" />
             <button class="btn btn-search" type="submit"><i class="fa fa-search"></i>
             </button> 
 
-            <div id="results-box-div" class="results-card-div not-visible">
-                <div id="results-box" class="results-card"></div>
-                <div id="sub-results-box" class="results-card"></div>
+            <div id="results-box-div-mobile" class="results-card-div not-visible">
+                <div id="results-box-mobile" class="results-card"></div>
+                <div id="sub-results-box-mobile" class="results-card"></div>
             </div>
         </form>
         </div>
@@ -1078,6 +1078,8 @@
             border-radius: 7px;
             padding: 15px 15px;
             z-index: 999;
+            max-height: 400px;
+            overflow-y: auto;
         }
   
     </style>
@@ -1307,6 +1309,60 @@ var typed = new Typed('.autotype', options);
             });
         })
     </script>
+
+    <script>
+        const searchInputMobile = document.getElementById('searches-mobile')
+        const resultsBoxMobile = document.getElementById('results-box-mobile')
+        const sub_resultsBoxMobile = document.getElementById('sub-results-box-mobile')
+        const resultDivMobile = document.getElementById('results-box-div-mobile')
+        
+        $("#searches-mobile").on('input',function(){
+            if (this.value == "") {
+                resultDivMobile.classList.add('not-visible');
+                return;
+            }
+            console.log(this.value);
+            if (resultDivMobile.classList.contains('not-visible')){
+                resultDivMobile.classList.remove('not-visible')
+            }
+            $.ajax({
+                type:'GET',
+                url:'/products/livesearch/',
+                data:{
+                    'prod':this.value,
+                },
+                dataType:'json',
+                success:function(res){
+                    console.log("success products")
+                    console.log(res)
+                    const datas = res.data
+                    const sub_datas = res.subcats
+                    if (Array.isArray(datas) && Array.isArray(sub_datas)){//if views.py sends array
+                        sub_resultsBoxMobile.innerHTML = "<div><h4 style='color: gray; font-size: 2rem; margin-top: 2rem; margin-bottom: 1rem;'>Subcategory</h4></div>"
+                        sub_datas.forEach(abc=>{
+                            sub_resultsBoxMobile.innerHTML += `
+                            <a href="${abc.url}" class="item">
+                                <div class="row mt-2 mb-2">
+                                    <div class="col-10">
+                                        <h5>${abc.name}</h5>
+                                    </div>
+                                </div>
+                            <a>`
+                        })
+                    }                    
+                    else{//if there is no products the following code will execute(if views.py doesnt send array)
+                        if (searchInputMobile.value.length > 0){
+                            sub_resultsBoxMobile.innerHTML = `<b>${datas}</b>`//for showing no products found
+                        }
+                        else{
+                            resultDivMobile.classList.add('not-visible')
+                        }
+                    }
+                }
+            });
+        })
+    </script>
+
     <script>
         function handleSearchFormSubmit() {
             const formElement = document.getElementById("search-form");
