Implemented header mobile live search

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -6753,7 +6753,7 @@
   position: fixed;
   bottom: 0px;
   width: 100%;
-  z-index: 500;
+  z-index: 9999999;
   background: white;
   padding: 0px 15px;
   padding-top: 7px;
@@ -9656,4 +9656,70 @@ padding: 10px !important;
   padding: 0.2em;
   height: 2em;
   opacity: 0;
+}
+
+.results-card-div-mobile {
+  position: fixed !important;
+  max-height: unset !important;
+  top: 60px !important;
+  max-height: unset !important;
+  height: calc(100vh - 60px);
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.results-card-div-mobile::-webkit-scrollbar {
+  display: none;
+}
+
+.results-card-loading-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.lds-ring {
+  display: inline-block;
+  position: absolute;
+  width: 80px;
+  height: 80px;
+
+  top: 50%;
+  left: 50%;
+  margin: -50px 0 0 -50px;
+}
+
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 55px;
+  height: 55px;
+  margin: 8px;
+  border: 8px solid #00917C;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #00917C transparent transparent transparent;
+}
+
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
