--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -9723,3 +9723,21 @@ padding: 10px !important;
     transform: rotate(360deg);
   }
 }
+
+.edit-profile {
+  color: #00917C;
+}
+
+.edit-profile:hover {
+  color: #fff;
+}
+
+.edit-profile:hover i {
+  color: #fff;
+}
+
+.edit-profile i {
+  color: #00917C;
+  margin-right: 4px;
+  transition: 200ms ease-out;
+}
