--- a/templates/sanjog/sellerpage_ajax.html
+++ b/templates/sanjog/sellerpage_ajax.html
@@ -545,7 +545,7 @@
                         }
                         $('.product-wrapper').append(data.content);
 
-                        $('#lds-roller').css('display', 'block'); // Hide loader after AJAX request is done
+                        $('#lds-roller').css('display', 'none'); // Hide loader after AJAX request is done
                     }
                 })
             }
