--- a/templates/products/edit.html
+++ b/templates/products/edit.html
@@ -29,7 +29,6 @@
                       <div class="form-group">
                         <label for="inputAddress">Product Name</label>
                         <input type="text" class="form-control" id="inputAddress" placeholder="" name="product-name" value="{{product}}" required>
-                        <small>Do not exceed 20 characters when entering a product name</small>
                       </div>
               <div class="form-row">
                         <div class="form-group col-md-6 add_products_dropdown">
@@ -57,7 +56,6 @@
                         <label for="exampleFormControlTextarea1">Description</label>
                         <textarea class="form-control" id="description" rows="5"
                         aria-describedby="description" name="description" value="{{product.description}}"></textarea>
-                        <small>Do not exceed 100 characters</small>
 
                     </div>
                 </div>
@@ -134,6 +132,28 @@
                             <input type="number" class="form-control" id="inputAddress" placeholder="" name="max-price" value="{{product.max_price}}">
                           </div>
                       </div>
+
+                      
+                      <div class="shownoprice">
+
+                        <div>
+                          <input type="checkbox"/>
+                          <label>I do not want to show any prices for now</label>
+                        </div>
+                                  
+              
+                                      <div class="custom-tooltip assigneduser mt-0" data-original-title="" title="">
+                                        <img src="https://cdn-icons-png.flaticon.com/512/9485/9485469.png" alt=""/>
+                                        <div class="customtip">
+                                            <p>It is always better to show prices in order to get quotes instantly. However, you can tick the checkbox if you want to keep your prices hidden.</p>
+                                        </div>
+                                    </div>
+              
+                                      
+                                      
+              
+              
+                                    </div>
                  
                 </div>
 
@@ -1290,6 +1310,20 @@ loadImageToDiv("{{product.image4.url}}", output, prompt);
         }
     }
 </script>
+
+<script>
+    const checkbox = document.querySelector('input[type="checkbox"]');
+  const minPriceInput = document.querySelector('input[name="min-price"]');
+  const maxPriceInput = document.querySelector('input[name="max-price"]');
+  
+  checkbox.addEventListener('change', () => {
+    if (checkbox.checked) {
+      minPriceInput.value = 0;
+      maxPriceInput.value = 0;
+    }
+  });
+  
+  </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
