--- a/templates/sanjog/sellerpage_ajax.html
+++ b/templates/sanjog/sellerpage_ajax.html
@@ -30,22 +30,43 @@
             <div class="container d-flex flex-column flex-sm-row align-items-center align-items-sm-start align-items-lg-center justify-content-center justify-content-sm-between justify-content-md-between"
                 style="gap: 2rem;">
                 <div class="d-flex flex-column flex-lg-row align-items-center" style="gap: 2rem;">
-                    <div class="profile-image d-flex">
-                        {% if supplier.profile_image %}
-                        <img src="{{supplier.profile_image.url}}" alt="" />
-                        {% else %}
-                        <img src="https://cdn-icons-png.flaticon.com/512/4140/4140037.png" alt="" />
-                        {% endif %}
-                        <div class="mobile-profile-detail profile-details-info d-none d-mb-block">
-                            <h1>{{supplier.company_name}}</h1>
-                            <div class="rates">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
+                    <div class="d-flex flex-column">
+                        <form method="post" id="profile-picture" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="profile-image d-flex">
+                            <div class="profile-pic">
+                                {% if supplier == request.user.supplier %}
+                                    <label class="-label" for="file">
+                                        <span class="glyphicon glyphicon-camera"></span>
+                                        <span>Change Image</span>
+                                    </label>
+                                    <input id="file" name="profile_picture" type="file" onchange="loadFile(event)"/>
+                                {% endif %}
+
+                                {% if supplier.profile_picture.url != "/media/default.jpg" %}
+                                    <img class="{% if supplier == request.user.supplier %}changable{% endif %}" src="{{supplier.profile_picture.url}}" alt="" />
+                                {% else %}
+                                    <img class="{% if supplier == request.user.supplier %}changable{% endif %}" src="https://cdn-icons-png.flaticon.com/512/4140/4140037.png" alt="" />
+                                {% endif %}
+                            </div>
+
+                            <div class="mobile-profile-detail profile-details-info d-none d-mb-block">
+                                <h1>{{supplier.company_name}}</h1>
+                                <div class="rates">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </div>
                             </div>
                         </div>
+                        </form>
+                        {% if supplier == request.user.supplier %}
+                        <a href="{% url 'company_profile' %}" class="filterbtn mt-3 edit-profile" type="submit">
+                            <i class="fa-solid fa-pen-to-square"></i> Edit Profile
+                        </a>
+                        {% endif %}
                     </div>
                     <div class="profile-details-info">
                         <h1>{{supplier.company_name}}</h1>
@@ -467,6 +488,13 @@
 
         })
 </script>
+
+<script>
+    function loadFile(event) {
+        document.getElementById("profile-picture").submit()
+    };
+</script>
+
 <script>
         const supplier_searchinput = document.getElementById('dt-search-filter')
         const supplier_resultsbox = document.getElementById('supplier-results-box')
