--- a/templates/sanjog/header.html
+++ b/templates/sanjog/header.html
@@ -815,29 +815,29 @@
                         <div class="swiper-wrapper row cols-1 gutter-no">
                             <div class="swiper-slide">
                                 <figure class="product-image">
-                                    <img src="static/assets/images/products/popup/1-440x494.jpg"
-                                        data-zoom-image="assets/images/products/popup/1-800x900.jpg"
+                                    <img src="{%static 'assets/images/products/popup/1-440x494.jpg' %}"
+                                        data-zoom-image="{% static 'assets/images/products/popup/1-800x900.jpg' %}"
                                         alt="Water Boil Black Utensil" width="800" height="900">
                                 </figure>
                             </div>
                             <div class="swiper-slide">
                                 <figure class="product-image">
-                          <img src="static/assets/images/products/popup/2-440x494.jpg"
-                                        data-zoom-image="static/assets/images/products/popup/2-800x900.jpg"
+                          <img src="{% static 'assets/images/products/popup/2-440x494.jpg' %}"
+                                        data-zoom-image="{% static 'assets/images/products/popup/2-800x900.jpg' %}"
                                         alt="Water Boil Black Utensil" width="800" height="900">
                                 </figure>
                             </div>
                             <div class="swiper-slide">
                                 <figure class="product-image">
-                                    <img src="assets/images/products/popup/3-440x494.jpg"
-                                        data-zoom-image="assets/images/products/popup/3-800x900.jpg"
+                                    <img src="{% static 'assets/images/products/popup/3-440x494.jpg' %}"
+                                        data-zoom-image="{% static 'assets/images/products/popup/3-800x900.jpg' %}"
                                         alt="Water Boil Black Utensil" width="800" height="900">
                                 </figure>
                             </div>
                             <div class="swiper-slide">
                                 <figure class="product-image">
-                                    <img src="assets/images/products/popup/4-440x494.jpg"
-                                        data-zoom-image="assets/images/products/popup/4-800x900.jpg"
+                                    <img src="{% static 'assets/images/products/popup/4-440x494.jpg' %}"
+                                        data-zoom-image="{% static 'assets/images/products/popup/4-800x900.jpg' %}"
                                         alt="Water Boil Black Utensil" width="800" height="900">
                                 </figure>
                             </div>
@@ -853,19 +853,19 @@
                     }">
                         <div class="product-thumbs swiper-wrapper row cols-4 gutter-sm">
                             <div class="product-thumb swiper-slide">
-                                <img src="assets/images/products/popup/1-103x116.jpg" alt="Product Thumb" width="103"
+                                <img src="{% static 'assets/images/products/popup/1-103x116.jpg' %}" alt="Product Thumb" width="103"
                                     height="116">
                             </div>
                             <div class="product-thumb swiper-slide">
-                                <img src="assets/images/products/popup/2-103x116.jpg" alt="Product Thumb" width="103"
+                                <img src="{% static 'assets/images/products/popup/2-103x116.jpg' %}" alt="Product Thumb" width="103"
                                     height="116">
                             </div>
                             <div class="product-thumb swiper-slide">
-                                <img src="assets/images/products/popup/3-103x116.jpg" alt="Product Thumb" width="103"
+                                <img src="{% static 'assets/images/products/popup/3-103x116.jpg' %}" alt="Product Thumb" width="103"
                                     height="116">
                             </div>
                             <div class="product-thumb swiper-slide">
-                                <img src="assets/images/products/popup/4-103x116.jpg" alt="Product Thumb" width="103"
+                                <img src="{% static 'assets/images/products/popup/4-103x116.jpg' %}" alt="Product Thumb" width="103"
                                     height="116">
                             </div>
                         </div>
@@ -879,7 +879,7 @@
                     <h2 class="product-title">Electronics Black Wrist Watch</h2>
                     <div class="product-bm-wrapper">
                         <figure class="brand">
-                            <img src="assets/images/products/brand/brand-1.jpg" alt="Brand" width="102" height="48" />
+                            <img src="{% static 'assets/images/products/brand/brand-1.jpg' %}" alt="Brand" width="102" height="48" />
                         </figure>
                         <div class="product-meta">
                             <div class="product-categories">
