--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -9447,17 +9447,8 @@ padding: 10px !important;
 }
 
 .share-dropdown-content {
-  display: none;
-  cursor: pointer;
-  position: absolute;
-  right: 0;
-  float: right;
-  background-color: white;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 999;
-  width: 140px;
-
   flex-direction: column;
+  display: flex;
 }
 
 .share-dropdown-content button {
@@ -9635,17 +9626,7 @@ padding: 10px !important;
   width: 200px;
 }
 
-.profile-pic:hover .-label {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 10000;
-  color: #fafafa;
-  transition: background-color 0.2s ease-in-out;
-  border-radius: 100px;
-  margin-bottom: 0;
-}
+
 
 .profile-pic:hover span {
   opacity: 1;
@@ -9737,7 +9718,22 @@ padding: 10px !important;
 }
 
 .edit-profile i {
-  color: #00917C;
-  margin-right: 4px;
+  color: #fff;
   transition: 200ms ease-out;
+}
+
+
+.filterbtn.edit-profile{
+  padding: 10px;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 20px;
+  right: 0px;
+  background: var(--main-color);
+  color: white;
 }
