--- a/templates/sanjog/sellerpage.html
+++ b/templates/sanjog/sellerpage.html
@@ -31,7 +31,7 @@
             <div class="container d-flex flex-column flex-sm-row align-items-center align-items-sm-start align-items-lg-center justify-content-center justify-content-sm-between justify-content-md-between"
                 style="gap: 2rem;">
                 <div class="d-flex flex-column flex-lg-row align-items-center" style="gap: 2rem;">
-                    <div class="d-flex flex-column">
+                    <div class="d-flex flex-column position-relative">
                         <form method="post" id="profile-picture" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="profile-image d-flex">
@@ -65,7 +65,7 @@
                         </form>
                         {% if supplier == request.user.supplier %}
                         <a href="{% url 'company_profile' %}" class="filterbtn mt-3 edit-profile" type="submit">
-                            <i class="fa-solid fa-pen-to-square"></i> Edit Profile
+                            <i class="fa fa-edit"></i> 
                         </a>
                         {% endif %}
                     </div>
@@ -280,7 +280,7 @@
                                     <input type="hidden" name="sub_categ" value="{{subcat}}">
                                     {% endfor %}
                                     {% for brand in selected_brands %}
-                                    <input type="hidden" name="brand" value="{{brand}}">
+                                    <input type="hidden" name="brand" value="{{brand}}"> 
                                     {% endfor %}
                         <input id="dt-search-filter" style="border:1px solid lightgray; border-radius: 999px;"
                             type="search" name="keyword" placeholder="Search">
